# studying_projects

./: README.md  dijkstra's_algorithm.py  file_interface.py  producer-consumer.py  teachers_speech.py  to_json decorator
argparse_module/: README.MD  storage.py
face_detecter/: face_detecter.py
practicing-kafka/: docker-compose.yaml
practicing-kafka/animals_api/: Dockerfile  pyproject.toml
practicing-kafka/animals_api/animals_api/: main.py
practicing-kafka/animals_manager/: Dockerfile  message_reader.py  pyproject.toml
pythonProject13/: main.py
