[tool.poetry]
name = "animals-api"
version = "0.1.0"
description = ""
authors = ["Andrey Sobolev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
confluent-kafka = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
