[tool.poetry]
name = "animals-manager"
version = "0.1.0"
description = ""
authors = ["Andrey Sobolev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
